@@ -9,18 +9,19 @@ Test suite:   activity
 #import <simtools.h>
 
 
-int main(int argc, const char ** argv)
+int 
+main (int argc, const char ** argv)
 {
   id actionGroupTest;
   id obj;
   int i, ok;
 
-  initSwarm(argc, argv);
-  init_tables();
+  initSwarm (argc, argv);
+  init_tables ();
 
   actionGroupTest = [ActionGroup_test createBegin: globalZone 
 				      numberOfObjects: 5];
-  for (i=0;i<5;i++)
+  for (i = 0; i < 5; i++)
     {
       obj = [Responder create:globalZone];
       [actionGroupTest addObject: obj];
@@ -41,14 +42,14 @@ int main(int argc, const char ** argv)
   [[actionGroupTest activateIn: nil] run];
   
   ok = 0;
-  for (i=0;i<5;i++) 
+  for (i = 0; i < 5; i++) 
     {
       if (!messages[i]) 
 	{
-	  fprintf(stderr,"Error in ActionGroupRandomized  method m%d not called !\n", i+1);
+	  fprintf (stderr,"Error in ActionGroupRandomized  method m%d not called !\n", i + 1);
 	  return 1;
 	}
-      if (messages[i]!=i+1) 
+      if (messages[i] != i + 1) 
 	ok = 1;
     }
   
@@ -56,7 +57,7 @@ int main(int argc, const char ** argv)
     return 0;
   else 
     {
-      fprintf(stderr, "Error ActionGroupRandomized should be randomized!\n");
+      fprintf (stderr, "Error ActionGroupRandomized should be randomized!\n");
       return 1;
     }
 }
