@@ -10,18 +10,19 @@ Test suite:   activity
 #import "Responder.h"
 #import <simtools.h>
 
-int main(int argc, const char ** argv)
+int 
+main (int argc, const char ** argv)
 {
   id concGroupTest;
   id obj;
   int i, ok;
   
-  initSwarm(argc, argv);
-  init_tables();
+  initSwarm (argc, argv);
+  init_tables ();
   
   concGroupTest = [ConcurrentGroup_test createBegin: globalZone 
 					numberOfObjects: 5];
-  for (i=0;i<5;i++)
+  for (i = 0; i < 5; i++)
     {
       obj = [Responder create:globalZone];
       [concGroupTest addObject: obj];
@@ -42,14 +43,14 @@ int main(int argc, const char ** argv)
   [[concGroupTest activateIn: nil] run];
   
   ok = 0;
-  for (i=0;i<5;i++) 
+  for (i = 0; i < 5; i++) 
     {
       if (!messages[i]) 
 	{
-	  fprintf(stderr,"Error in ActionGroupRandomized  method m%d not called !\n", i+1);
+	  fprintf (stderr, "Error in ActionGroupRandomized  method m%d not called !\n", i + 1);
 	  return 1;
 	}
-      if (messages[i]!=i+1) 
+      if (messages[i] != i + 1) 
 	ok = 1;
     }
   
@@ -57,7 +58,7 @@ int main(int argc, const char ** argv)
     return 0;
   else 
     {
-      fprintf(stderr, "Error ActionGroupRandomized should be randomized!\n");
+      fprintf (stderr, "Error ActionGroupRandomized should be randomized!\n");
       return 1;
     }
 }
