@@ -13,30 +13,28 @@ Test suite:   activity
 #define CLASS_NAME ConcurrentGroup_test
 #include "Holder.m"
 
-- (void) describe: (id) outputCharStream
+- (void)describe: outputCharStream
 {
   char description[100];
   
-  sprintf(description, "ConcurrentGroup test. 1 \n");
-  sprintf(description, "Randomized:        %d\n", getBit(bits,BitRandomized));
-  sprintf(description, "Number of objects: %d\n", numberOfObjects); 
+  sprintf (description, "Randomized:        %d\n", 
+	   getBit (bits, BitRandomized));
+  sprintf (description, "Number of objects: %d\n", numberOfObjects); 
   [outputCharStream catC: description];
 }
 
-- (void) describeForEach: (id) outputCharStream
+- (void)describeForEach: outputCharStream
 {
   char buffer[50];
   int i;
-  for (i=0;i<numberOfObjects;i++)
+  for (i = 0; i < numberOfObjects; i++)
     {
-      id obj = *(objects+i);
-      if (respondsTo(obj, M(describe:)))
-	{
-	  [obj describe: outputCharStream];
-	}    
+      id obj = *(objects + i);
+      if (respondsTo (obj, M(describe:)))
+   	  [obj describe: outputCharStream];
       else
 	{
-	  _obj_formatIDString( buffer, obj);
+	  _obj_formatIDString (buffer, obj);
 	  [outputCharStream catC: buffer];
 	}
     }
