@@ -10,26 +10,27 @@ Test suite:   activity
 #import "Responder.h"
 #import <simtools.h>
 
-int main(int argc, const char ** argv)
+int 
+main (int argc, const char ** argv)
 {
   id actionGroupTest;
   id obj;
   id collection;
   int i, ok;
   
-  initSwarm(argc, argv);
-  init_tables();
+  initSwarm (argc, argv);
+  init_tables ();
   
   actionGroupTest = [ActionGroup_test createBegin: globalZone 
 				      numberOfObjects: 6];
-  for (i=0;i<5;i++)
+  for (i = 0; i < 5; i++)
     {
       obj = [Responder create:globalZone];
       [actionGroupTest addObject: obj];
     }
   collection = [List createBegin: globalZone];
   collection = [collection createEnd];
-  for (i=1;i<=5;i++)
+  for (i = 1; i <= 5; i++)
     {
       [collection addLast: [Responder create: globalZone withId: i]];
     }
@@ -54,19 +55,19 @@ int main(int argc, const char ** argv)
   [[actionGroupTest activateIn: nil] run];
   
   ok = 1;
-  for (i=0;i<5;i++) 
+  for (i = 0; i<5; i++) 
     {
       if (!messages[i]) 
 	{
-	  fprintf(stderr,"Error in ActionGroupRandomized  method m%d not called !\n", i+1);
+	  fprintf (stderr, "Error in ActionGroupRandomized  method m%d not called !\n", i + 1);
 	  return 1;
 	}
       if (!ids[i])
 	{
-	  fprintf(stderr,"Error in ForEachAction message not sent to member of \n collection at index %d !\n", i);
+	  fprintf (stderr, "Error in ForEachAction message not sent to member of \n collection at index %d !\n", i);
 	  return 1;
 	}
-      if (ids[i]!=i+1) 
+      if (ids[i] != i + 1) 
 	ok = 0;
     }
   
@@ -74,7 +75,7 @@ int main(int argc, const char ** argv)
     return 0;
   else 
     {
-      fprintf(stderr, "Error ForEachAction should not be randomized!\n");
+      fprintf (stderr, "Error ForEachAction should not be randomized!\n");
       return 1;
     }
 }
