@@ -1,3 +1,15 @@
+1999-01-13  Vladimir Jojic  <vjojic@wijiji.santafe.edu>
+
+	* Makefile.am: Use noinst_PROGRAMS instead of bin_PROGRAMS. 
+
+	* ActionGroup.m, ActionGroupRandomized.m, ActionGroup_test.h, 
+	ActionGroup_test.m, ChangeLog, ConcurrentGroup.m, 
+     	ConcurrentGroupRandomized.m, ConcurrentGroup_test.h, 
+     	ConcurrentGroup_test.m, DSRSwarm.h, DSRSwarm.m, DSSwarm.h, 
+     	DSSwarm.m, DynamicSchedule.m, DynamicScheduleRepeat.m, ForEach.m, 
+     	ForEachRandomized.m, Holder.h, Holder.m, Responder.h, Responder.m, 
+	Schedule.m:  Formatting.
+
 1999-01-12  Vladimir Jojic  <vjojic@wijiji.santafe.edu>
 
 	* ActionGroup.m: New file.
